--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   lottie: ^3.1.2
   awesome_notifications: ^0.10.1
   timezone: ^0.9.4
+  fl_chart: ^0.68.0
 
 dev_dependencies:
   flutter_test:
@@ -79,8 +80,20 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/snail.png
-    - assets/images/daily_quest_logo.png
+    - assets/images/daily_quest_logo_teal.png
+    - assets/images/daily_quest_logo_pink.png
+    - assets/images/daily_quest_logo_burgundy.png
+    - assets/images/daily_quest_logo_slate.png
+    - assets/images/daily quest planner_teal_lightlogo.png
+    - assets/images/daily quest planner_teal_darklogo.png
+    - assets/images/daily quest planner_pink_lightlogo.png
+    - assets/images/daily quest planner_pink_darklogo.png
+    - assets/images/daily quest planner_burgundy_lightlogo.png
+    - assets/images/daily quest planner_burgundy_darklogo.png
+    - assets/images/daily quest planner_slate_lightlogo.png
+    - assets/images/daily quest planner_slate_darklogo.png
     - assets/animations/
+    - assets/config/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
