--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.8
   flutter_gen_runner: ^5.3.2
-  flutter_native_splash: ^2.3.5
+  # flutter_native_splash: ^2.3.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -121,20 +121,20 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
 
-# Flutter Native Splash Configuration
-flutter_native_splash:
-  color: "#FFFFFF"
-  fullscreen: true
-  android_12:
-    color: "#FFFFFF"
-    icon_background_color: "#FFFFFF"
-  ios:
-    color: "#FFFFFF"
-  web:
-    color: "#FFFFFF"
-  windows:
-    color: "#FFFFFF"
-  macos:
-    color: "#FFFFFF"
-  linux:
-    color: "#FFFFFF"
+# # Flutter Native Splash Configuration
+# flutter_native_splash:
+#   color: "#FFFFFF"
+#   fullscreen: true
+#   android_12:
+#     color: "#FFFFFF"
+#     icon_background_color: "#FFFFFF"
+#   ios:
+#     color: "#FFFFFF"
+#   web:
+#     color: "#FFFFFF"
+#   windows:
+#     color: "#FFFFFF"
+#   macos:
+#     color: "#FFFFFF"
+#   linux:
+#     color: "#FFFFFF"
