--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
-        android:label="daily_quest_planner"
+        android:label="Daily Quest"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
